test string representation of attribute groups

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dir.sh
 
 # default sqlite db used only for basic development
 db.sqlite3
+old_models.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
