--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Django >= 1.8.2
+Django >= 1.7
 djangorestframework >= 3.1.2
 pip >= 7.0.3
 psycopg2 >= 2.6
 setuptools >=  16.0
 wheel >= 0.24.0
 django-hstore>=1.3.8
+
+django-cms >= 3.1.0
+django-treebeard >= 3.0
