--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django >= 1.7
+Django == 1.7.8
 djangorestframework >= 3.1.2
 pip >= 7.0.3
 psycopg2 >= 2.6
@@ -8,3 +8,6 @@ django-hstore>=1.3.8
 
 django-cms >= 3.1.0
 django-treebeard >= 3.0
+django-mptt >= 0.7.4
+django-classy-tags >= 0.6.1
+
