a zeroth version of the migration script that does SOMETHING. seriously though, i should commit the progress.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ db.sqlite3
 # temporary files only used during development
 old_models.py
 from_v1/*.sql
+landmatrix_2.sql
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
