--- a/landmatrix/settings.py.dist
+++ b/landmatrix/settings.py.dist
@@ -6,6 +6,9 @@ LOG_DB_QUERIES = False
 CONVERT_DB = False
 CONVERT_FROM_MY = False
 
+# SECURITY WARNING: don't run with debug turned on in production!
+DEBUG = False
+
 # Database
 # https://docs.djangoproject.com/en/1.8/ref/settings/#databases
 DATABASES = {
