--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-cms >= 3.1.0
 django-treebeard >= 3.0
 django-mptt >= 0.7.4
 django-classy-tags >= 0.6.1
+django-datetime-widget>=0.9
 
 coverage
 
