--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ django-treebeard >= 3.0
 django-mptt >= 0.7.4
 django-classy-tags >= 0.6.1
 django-datetime-widget>=0.9
+djangocms_text_ckeditor >= 2.6
 
-coverage
+coverage >= 3.7
 
 xlwt >= 1.0.0
+python-mimeparse >= 0.1.4
