--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,13 @@
     "es5-shim": "~3.1.0",
     "bootstrap": "~3.3.5",
     "bootstrap-additions": "~0.3.1",
-    "font-awesome": "~4.3.0",
+    "font-awesome": "~4.5.0",
     "humanize-duration": "3.1.0",
     "openlayers": "https://github.com/openlayers/ol3/releases/download/v3.11.1/v3.11.1-dist.zip"
   },
   "devDependencies": {},
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "font-awesome": "~4.5.0"
+  }
 }
