Static movements adapted in paths
Former-commit-id: 8a11404c980bcf03bf09283142c59fed3c2fa3f2

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 
 settings.py
 
+# Collected(!) statics
+static/
+
+# Ignore global javascript vendor packages
+landmatrix/static/vendor/
+
 # IDE files and files from my personal environment
 dir.sh
 .idea
@@ -65,6 +71,3 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-
-# Frontend vendor libraries
-media/js/vendor
