deal detail view for old versions of a deal should now have the correct attributes fixed warnings in tests about timezone-naive datetimes

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 settings.py
 
 # Collected(!) statics
-./static/
+static/
+
+node_modules
+media/js
 
 # Ignore global javascript vendor packages
 landmatrix/static/vendor/
