--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "bootstrap-additions": "~0.3.1",
     "font-awesome": "~4.5.0",
     "humanize-duration": "3.1.0",
-    "openlayers": "https://github.com/openlayers/ol3/releases/download/v3.11.1/v3.11.1-dist.zip"
+    "openlayers": "https://github.com/openlayers/ol3/releases/download/v3.11.1/v3.11.1-dist.zip",
+    "d3": "~3.5.16",
+    "r2d3": "~0.2.0",
+    "raphael": "~2.1.4",
+    "select2": "~4.0.1"
   },
   "devDependencies": {},
   "appPath": "app",
