vendor files should be in git, so they dont need to be manually installed on server

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ node_modules
 media/js
 
 # Ignore global javascript vendor packages
-landmatrix/static/vendor/
+# no, don't, we dont want to add them manually on server
+#landmatrix/static/vendor/
 
 # IDE files and files from my personal environment
 dir.sh
