CSS Cleanup: Filters, footer and login
Former-commit-id: df0d3d3a487c4b99a16a339961d6419b279ce2cf

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,5 +37,6 @@ requests
 django-simple-history
 django-extensions
 
-django-debug-toolbar
+#django-debug-toolbar
 django_select2 >= 5.8
+#django-crispy-forms==1.6.0
