--- a/requirements.txt
+++ b/requirements.txt
@@ -7,25 +7,12 @@ setuptools >=  16.0
 wheel >= 0.24.0
 django-hstore>=1.3.8
 
-django-cms >= 3.1.0
 django-treebeard >= 3.0
 django-mptt >= 0.7.4
 django-classy-tags >= 0.6.1
 django-datetime-widget>=0.9
 
-djangocms-admin-style
-djangocms-column 
-djangocms-file 
-djangocms-flash
-djangocms-googlemap
-djangocms-inherit 
-djangocms-installer
-djangocms-link 
-djangocms-picture
-djangocms-style 
-djangocms-teaser
-djangocms_text_ckeditor >= 2.6
-djangocms-video
+wagtail >= 1.3
 
 coverage >= 3.7
 
