--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "d3": "~3.5.16",
     "r2d3": "~0.2.0",
     "raphael": "~2.1.4",
-    "select2": "~4.0.1"
+    "select2": "~4.0.1",
+    "nprogress": "~0.2.0"
   },
   "devDependencies": {},
   "appPath": "app",
