validate filter variables for plausibility
Former-commit-id: c799319920bd7ff4d427fb4de065cfbfdd4c5fde

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@ settings.py
 
 # Collected(!) statics
 ./static/
+static
+static/*
 
 node_modules
+media
+media/*
 media/js
 
 # Ignore global javascript vendor packages
