--- a/requirements.txt
+++ b/requirements.txt
@@ -13,22 +13,14 @@ django-classy-tags >= 0.6.1
 django-datetime-widget>=0.9
 
 wagtail >= 1.3
-
+wagtail-blog==1.6.5
 coverage >= 3.7
-
 xlwt >= 1.0.0
 python-mimeparse >= 0.1.4
-
 requests
-
 django-simple-history
 django-extensions
-
 #django-debug-toolbar
 django-crispy-forms==1.6.0
-
 django-threadedcomments
-
 django-wkhtmltopdf
-
-
