--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "r2d3": "~0.2.0",
     "raphael": "~2.1.4",
     "select2": "~4.0.1",
-    "nprogress": "~0.2.0"
+    "nprogress": "~0.2.0",
+    "d3-sankey": "*",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   },
   "devDependencies": {},
   "appPath": "app",
