--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-hstore>=1.3.8
 django-treebeard >= 3.0
 django-mptt >= 0.7.4
 django-classy-tags >= 0.6.1
-django-datetime-widget>=0.9
+django-bootstrap3-datetimepicker >= 2.2.3
 
 wagtail >= 1.3
 wagtail-blog==1.6.5
