--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "select2": "~4.0.1",
     "nprogress": "~0.2.0",
     "d3-sankey": "*",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
+    "formset": "https://github.com/elo80ka/django-dynamic-formset/archive/master.zip"
   },
   "devDependencies": {},
   "appPath": "app",
