External dependency fix (datetimepicker--, bootstrapswitch++)
Former-commit-id: 74b21efbdca6eebee8b92cfc1a11e43c61ea6e77

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "nprogress": "~0.2.0",
     "d3-sankey": "*",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
-    "formset": "https://github.com/elo80ka/django-dynamic-formset/archive/master.zip"
+    "formset": "https://github.com/elo80ka/django-dynamic-formset/archive/master.zip",
+    "bootstrap-switch": "~3.3.2"
   },
   "devDependencies": {},
   "appPath": "app",
