added django-rest-framework-docs to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ django-sekizai>=0.9.0
 django-sass-processor>=0.3.4
 django-recaptcha>=1.0.5
 djangorestframework>=3.3.3
+django-rest-framework-docs
