--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-treebeard >= 3.0
 django-mptt >= 0.7.4
 django-classy-tags >= 0.6.1
 
+django-bootstrap3-datetimepicker-2==2.4.2
+
 wagtail >= 1.3
 wagtail-blog==1.6.5
 coverage >= 3.7
