--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-classy-tags >= 0.6.1
 
 django-bootstrap3-datetimepicker-2==2.4.2
 
-wagtail >= 1.3
+wagtail==1.3
 wagtail-blog==1.6.5
 coverage >= 3.7
 xlwt >= 1.0.0
