--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-bootstrap3-datetimepicker-2==2.4.2
 
 wagtail==1.3.1
 wagtail-blog==1.6.5
-git+git://github.com/sinnwerkstatt/wagtail-modeltranslation.git
+git+git://github.com/sinnwerkstatt/wagtail-modeltranslation.git@translatable-streamfields
 coverage >= 3.7
 xlwt >= 1.0.0
 python-mimeparse >= 0.1.4
