--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,5 @@ django-sekizai>=0.9.0
 django-sass-processor>=0.3.4
 django-recaptcha>=1.0.5
 djangorestframework>=3.3.3
+djangorestframework-gis>=0.10.1
 drfdocs>=0.0.9
